--- a/styles.css
+++ b/styles.css
@@ -58,4 +58,117 @@ a {
 
 .form-container {
   width: 65%;
+  max-width: 700px;
+  height: 700px;
+  background-color: #fff;
+  padding: 25px 30px;
+  border-radius: 5px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+  margin: 0 auto;
+}
+
+.title,
+header {
+  font-size: 25px;
+  font-weight: 500;
+  position: relative;
+}
+
+.title::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 3px;
+  width: 30px;
+  border-radius: 5px;
+  background: linear-gradient(135deg, #71b7e6, #9b59b6);
+}
+
+.user-details {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 20px 0 12px 0;
+}
+.input-box {
+  margin-bottom: 15px;
+  width: calc(100% / 2 - 20px);
+}
+
+label {
+  display: block;
+  font-size: 0.7rem;
+  font-weight: 500;
+  margin-bottom: 5px;
+}
+
+input {
+  height: 45px;
+  width: 100%;
+  outline: none;
+  font-size: 16px;
+  border-radius: 5px;
+  padding-left: 15px;
+  border: 1px solid #ccc;
+  border-bottom-width: 2px;
+  transition: all 0.3s ease;
+}
+
+input:focus,
+input:valid {
+  border-color: #9b59b6;
+  /* transform: scale(1.5); */
+}
+
+.button {
+  width: 250px;
+  height: 45px;
+  margin: 35px 0;
+}
+
+.button > input {
+  height: 100%;
+  width: 100%;
+  border-radius: 5px;
+  /* border: none; */
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  background: linear-gradient(135deg, #71b7e6, #9b59b6);
+}
+
+.button > input:hover {
+  /* transform: scale(1.5); */
+  background: linear-gradient(-135deg, #71b7e6, #9b59b6);
+}
+
+@media (max-width: 584px) {
+  .form-container {
+    max-width: 100%;
+  }
+  .input-box {
+    margin-bottom: 15px;
+    width: 100%;
+  }
+  .user-details {
+    max-height: 300px;
+    overflow-y: scroll;
+  }
+  .user-details::-webkit-scrollbar {
+    width: 5px;
+  }
+}
+
+@media (max-width: 459px) {
+  .content {
+    flex-direction: column;
+  }
+}
+
+.sign-in-suggestion a {
+  color: #596d48;
 }
