--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@
 *::before,
 *::after {
   box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -24,6 +23,7 @@ body {
   text-align: center;
   background-image: url('images/halie-west-25xggax4bSA-unsplash.jpg');
   background-size: cover;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .logo-container {
@@ -65,6 +65,7 @@ a {
   border-radius: 5px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
   margin: 0 auto;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .title,
@@ -171,4 +172,31 @@ input:valid {
 
 .sign-in-suggestion a {
   color: #596d48;
+}
+
+#footer {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.8rem;
+  padding-top: 7rem;
+  text-align: center;
+  color: black;
+  text-shadow: 0 0 0.3rem gray;
+}
+
+#footer a {
+  text-decoration: none;
+  color: black;
+}
+
+#footer a:hover {
+  text-decoration: underline;
+  color: black;
+}
+
+#icon {
+  transition: transform 0.3s ease-in-out;
+}
+
+#icon:hover {
+  transform: rotate(360deg) scale(1.2);
 }
