--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,7 @@ body {
 
 .image-link {
   color: whitesmoke;
+  padding-top: 17rem;
 }
 
 a {
@@ -56,12 +57,16 @@ a {
   color: whitesmoke;
 }
 
+a:hover {
+  text-decoration: underline;
+}
+
 .form-container {
   width: 65%;
-  max-width: 700px;
-  height: 700px;
+  max-width: 44rem;
+  height: 44rem;
   background-color: #fff;
-  padding: 25px 30px;
+  padding: 1.5rem 1.8rem;
   border-radius: 5px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
   margin: 0 auto;
@@ -70,31 +75,20 @@ a {
 
 .title,
 header {
-  font-size: 25px;
+  font-size: 1.5rem;
   font-weight: 500;
   position: relative;
 }
 
-.title::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  height: 3px;
-  width: 30px;
-  border-radius: 5px;
-  background: linear-gradient(135deg, #71b7e6, #9b59b6);
-}
-
-.user-details {
+form .user-details {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin: 20px 0 12px 0;
+  margin: 1.25rem 0 0.75rem 0;
 }
 .input-box {
-  margin-bottom: 15px;
-  width: calc(100% / 2 - 20px);
+  margin-bottom: 1rem;
+  width: calc(100% / 2 - 1.25rem);
 }
 
 label {
@@ -105,46 +99,55 @@ label {
 }
 
 input {
-  height: 45px;
+  height: 2.8rem;
   width: 100%;
   outline: none;
-  font-size: 16px;
+  font-size: 1rem;
   border-radius: 5px;
-  padding-left: 15px;
+  padding-left: 1rem;
   border: 1px solid #ccc;
   border-bottom-width: 2px;
   transition: all 0.3s ease;
 }
 
-input:focus,
-input:valid {
-  border-color: #9b59b6;
-  /* transform: scale(1.5); */
+form input:valid {
+  border: 1px solid #8bc34a;
+}
+
+input:focus:invalid {
+  transform: scale(1.2);
+  border: 2px solid red;
+  box-shadow: 0.4rem 0.4rem 0.3rem 0 rgba(0, 0, 0, 0.2);
+}
+
+input:focus:valid {
+  transform: scale(1.2);
+  border: 2px solid green;
+  box-shadow: 0.4rem 0.4rem 0.3rem 0 rgba(0, 0, 0, 0.2);
 }
 
 .button {
-  width: 250px;
-  height: 45px;
-  margin: 35px 0;
+  width: 15rem;
+  height: 2.8rem;
+  margin: 2.2rem 0;
 }
 
-.button > input {
+button {
   height: 100%;
   width: 100%;
   border-radius: 5px;
-  /* border: none; */
+  border: none;
   color: #fff;
-  font-size: 18px;
+  font-size: 1.2rem;
   font-weight: 500;
-  letter-spacing: 1px;
+  letter-spacing: 0.1rem;
   cursor: pointer;
   transition: all 0.3s ease;
-  background: linear-gradient(135deg, #71b7e6, #9b59b6);
+  background-color: #596d48;
 }
 
-.button > input:hover {
-  /* transform: scale(1.5); */
-  background: linear-gradient(-135deg, #71b7e6, #9b59b6);
+button:hover {
+  transform: scale(1.2);
 }
 
 @media (max-width: 584px) {
@@ -152,11 +155,11 @@ input:valid {
     max-width: 100%;
   }
   .input-box {
-    margin-bottom: 15px;
+    margin-bottom: 1rem;
     width: 100%;
   }
   .user-details {
-    max-height: 300px;
+    max-height: 18rem;
     overflow-y: scroll;
   }
   .user-details::-webkit-scrollbar {
@@ -168,6 +171,9 @@ input:valid {
   .content {
     flex-direction: column;
   }
+  #footer {
+    flex-direction: column;
+  }
 }
 
 .sign-in-suggestion a {
@@ -177,20 +183,19 @@ input:valid {
 #footer {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 0.8rem;
-  padding-top: 7rem;
+  padding-top: 12rem;
   text-align: center;
-  color: black;
-  text-shadow: 0 0 0.3rem gray;
+  color: hsla(0, 0%, 20%, 1);
 }
 
 #footer a {
   text-decoration: none;
-  color: black;
+  color: hsla(0, 0%, 20%, 1);
 }
 
 #footer a:hover {
   text-decoration: underline;
-  color: black;
+  color: hsla(0, 0%, 20%, 1);
 }
 
 #icon {
