--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 15rem auto;
+  margin: 8rem auto;
   background-color: hsla(0, 2%, 8%, 0.5);
 }
 
@@ -50,6 +50,7 @@ body {
 .image-link {
   color: whitesmoke;
   padding-top: 17rem;
+  font-size: 0.7rem;
 }
 
 a {
@@ -63,8 +64,8 @@ a:hover {
 
 .form-container {
   width: 65%;
-  max-width: 44rem;
-  height: 44rem;
+  max-width: 34rem;
+  height: 34rem;
   background-color: #fff;
   padding: 1.5rem 1.8rem;
   border-radius: 5px;
@@ -75,7 +76,7 @@ a:hover {
 
 .title,
 header {
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-weight: 500;
   position: relative;
 }
@@ -87,13 +88,13 @@ form .user-details {
   margin: 1.25rem 0 0.75rem 0;
 }
 .input-box {
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
   width: calc(100% / 2 - 1.25rem);
 }
 
 label {
   display: block;
-  font-size: 0.7rem;
+  font-size: 0.5rem;
   font-weight: 500;
   margin-bottom: 5px;
 }
@@ -103,10 +104,10 @@ label:hover {
 }
 
 input {
-  height: 2.8rem;
+  height: 2rem;
   width: 100%;
   outline: none;
-  font-size: 1rem;
+  font-size: 0.7rem;
   border-radius: 5px;
   padding-left: 1rem;
   border: 1px solid #ccc;
@@ -131,9 +132,9 @@ input:focus:valid {
 }
 
 .button {
-  width: 15rem;
-  height: 2.8rem;
-  margin: 2.2rem 0;
+  width: calc(100% / 2 - 1.25rem);
+  height: 2rem;
+  margin: 2rem 0;
 }
 
 button {
@@ -142,7 +143,7 @@ button {
   border-radius: 5px;
   border: none;
   color: #fff;
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: 500;
   letter-spacing: 0.1rem;
   cursor: pointer;
@@ -186,8 +187,8 @@ button:hover {
 
 #footer {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 0.8rem;
-  padding-top: 12rem;
+  font-size: 0.7rem;
+  padding-top: 7rem;
   text-align: center;
   color: hsla(0, 0%, 20%, 1);
 }
@@ -211,7 +212,7 @@ button:hover {
 }
 
 .input-checkbox {
-  margin-bottom: 1rem;
+  margin-bottom: 0.7rem;
   width: calc(100% / 2 - 1.25rem);
   display: flex;
   align-items: center;
